<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterActivity"
    android:background="@color/bg_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_character_name"
            android:text="@string/tv_name_text"
            android:textColor="@color/text_color"
            android:textSize="35sp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_character_race"
            android:text="@string/tv_race_text"
            android:textColor="@color/text_color"
            android:textSize="35sp"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="40dp"
            android:id="@+id/iv_character_image"
            android:contentDescription="@string/cd_iv_character"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_character_power"
            android:text="@string/tv_power_text"
            android:textSize="35sp"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:id="@+id/btn_back2main"
            android:backgroundTint="@color/bg_fab"
            android:text="@string/btn_back2main"
            android:textColor="@color/text_color"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>